[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Cursor.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tile_1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Tile.gd" type="Script" id=3]
[ext_resource path="res://Assets/Tree_1.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="Tile" type="Area2D" groups=["Tile"]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TreeSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Cursor" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Tile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tile_mouse_exited"]
